# tree-sitter-sassdoc

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.scss  tree-sitter.json
.github/workflows/: ci.yml  release.yml
bindings/c/: tree-sitter-sassdoc.pc.in
bindings/c/tree_sitter/: tree-sitter-sassdoc.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sassdoc/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSassdocTests/: TreeSitterSassdocTests.swift
queries/sassdoc/: highlights.scm  injections.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: comment_styles.txt  description.txt  simple_tags.txt  tag_example.txt  tag_link.txt  tag_param.txt  tag_property.txt  tag_return.txt  tag_see.txt  types.txt
