[package]
name = "tree-sitter-sassdoc"
description = "SassDoc grammar for the tree-sitter parsing library"
version = "0.1.0"
authors = ["Simeon Simeonoff <simeon@simeonoff.ninja>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sassdoc"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/simeonoff/tree-sitter-sassdoc"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
